--- a/src/app/hamburger-menu/hamburger-menu.component.scss
+++ b/src/app/hamburger-menu/hamburger-menu.component.scss
@@ -1,8 +1,6 @@
 @import "../theme";
 
 div {
-  width: 100vw;
-  height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
