--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -6,7 +6,6 @@ header {
   justify-content: space-between;
   color: $grayscale-900;
   padding: 0 2ch;
-  width: 100vw;
 
   > #name {
     font-weight: 800;
@@ -22,7 +21,7 @@ header {
       align-items: center;
       justify-content: center;
 
-      @media screen and (min-width: 600px) {
+      @media screen and (min-width: 601px) {
         display: none;
         width: 0;
       }
@@ -44,7 +43,6 @@ header {
       height: 100%;
       padding: 0;
       margin: 0;
-      margin-right: clamp(0px, 10ch, 5vw);
       list-style: none;
       > li {
         display: inline-block;
