--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -53,7 +53,6 @@
   position: absolute;
   bottom: 1rem;
   left: 1vw;
-  font-size: clamp(30px, 8vw, 10vw);
   height: 11rem;
   font-family: "Anonymous Pro", monospace;
   text-shadow: 4px 4px rgba(0, 0, 0, 0.4);
@@ -89,5 +88,4 @@
   position: absolute;
   bottom: 12rem;
   left: 1vw;
-  font-size: clamp(22px, 6vw, 8vw);
 }
