--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@
 }
 
 :root {
+  min-height: 100%;
   font-family: "Montserrat", sans-serif;
   font-size: 3vw;
   @media screen and (min-width: 600px) {
@@ -16,6 +17,9 @@
 }
 
 body {
+  min-height: 100vh;
+  width: 100vw;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
